iidy/tests/snapshots/error_examples_snapshots__tag_map_uses_source_error.snap
---
source: tests/error_examples_snapshots.rs
expression: error_output
---
Tag error: 'source' should be 'items' @ example-templates/errors/tag-map-uses-source.yaml:6 (errno: IY4002)
  -> use 'items' instead of 'source'

   5 | configs: !$map
   6 |   source: !$ services
     |   ^^^^^^
   7 |   template: "{{item}}-config"
   For more info, run: iidy explain IY4002
